chatbot/fastapi-app/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
        - name: chatbot
          image: juniochatbotacr.azurecr.io/fastapi-app:latest
          ports:
            - containerPort: 8000
